apps/ollama/components/tailscale/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama
  namespace: shikanime
  annotations:
    tailscale.com/tags: tag:web
  labels:
    tailscale.com/proxy-class: nishir-ollama
spec:
  ingressClassName: tailscale
